--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Annotate linting errors
+        uses: marian-code/python-lint-annotate@v2
+        with:
+          python-root-list: "."
+          use-black: false
+          use-isort: false
+          use-mypy: false
+          use-pycodestyle: true
+          use-pydocstyle: false
+          use-pylint: false
+          use-flake8: false
+          use-vulture: false
+          extra-pycodestyle-options: "--config=setup.cfg"
+          conda-python-version: "3.8"
       - name: Run pycodestyle
+        # This is required because the annotate action doesn't trigger a failure
         run: |
-          ./check_pep8.sh
+          ./check_pep8.sh 1> /dev/null
